--- a/physics-simulations/pyproject.toml
+++ b/physics-simulations/pyproject.toml
@@ -12,6 +12,7 @@ vpython = "^7.6.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
